css/style.css
/* ===== GLOBAL STYLES ===== */
*{
    margin: 0;
    padding: 0;
}
html {
    scroll-behavior: smooth;
}
body {
    background: #fff;
    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
    font-size: 14px;
    color: #333;
    line-height: 22px;
}
h1 {
    color: #fff;
    text-shadow: 2px 2px 0 #000;
    font-size: 36px;
    line-height: 48px;
    text-align: center;
}
.wrapper {
    display: flex;
    flex-flow: row wrap;
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    /* border: solid 1px yellowgreen; */
}
.inner-wrapper {
    display: flex;
    justify-content: space-between;
    width: 100%;
    /* border: solid 1px purple; */
}
.fixed-bg {
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.full-width {
    width: 100%;
    /* border: solid 1px aqua; */
}
.half-width {
    width: 48.5%;
    /* border: solid 1px blue; */
}
.third-width {
    width: 31.5%;
    /* border: solid 1px red; */
}
.fourth-width {
    width: 22.5%;
    /* border: solid 1px orange; */
}
.box {
    background-color: #F2F2F2;
    margin: 20px 0;
}
.box-content {
    flex-direction: column;
    justify-content: space-between;
    padding: 20px;
    /* border: solid 1px maroon; */
}
.box-content p {
    padding: 10px 0;
}
button {
    padding: 10px 40px;
    border: none;
    outline: none;
    border-radius: 10px;
    font-size: 18px;
    margin: 10px 30px 15px;
    border: 1px solid #CCC;
    cursor: pointer;
    transition: all ease 0.2s;
}
.basic:hover {
    background: #E6E6E6;
}

/* ===== NAVIGATION ===== */
nav {
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #383E4C;
    width: 100%;
    height: 70px;
    z-index: 1;
}
nav ul {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}
nav ul li {
    display: flex;
    flex-wrap: nowrap;
    list-style-type: none;
    margin: 0 10px;
}
nav ul li a {
    display: flex;
    flex-wrap: nowrap;
    color: #fff;
    text-decoration: none;
    padding: 12px 25px;
    border: 1px solid #666C7A;
    font-size: 16px;
}
nav ul li a:hover, .active {
    background-color: #495060
}
#back-to-top {
    position: fixed;
    right: 20px;
    bottom: 20px;
}
#back-to-top img {
    max-width: 40px;
}
:target:before {
    content: "";
    display: block;
    height: 70px;
    margin: -70px 0 0;
}

/* ===== HOMEPAGE ===== */
#homepage {
    background-image: url('../img/home-bg.jpg');
    height: 670px;
}
header {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 600px;
}
header .wrapper {
    flex-direction: column;
}
#homepage h1 {
    font-size: 72px;
    line-height: 96px;
    text-transform: uppercase;
    font-weight: lighter;
}
#homepage h4 {
    color: #fff;
    text-align: center;
    font-size: 24px;
    line-height: 36px;
    text-shadow: 1px 1px 0 #000;
}

/* ===== ABOUT US ===== */
#about {
    padding: 50px 0;
}
#about .wrapper {
    max-width: 1200px;
}
#about .inner-wrapper {
    padding: 0 20px;
}
#about img {
    max-width: 100%;
}
#green div, #blue div, #red div {
    display: flex;
    padding-top: 10px;
}
#green h2 {
    color: #178927;
}
#green button {
    background-color: #178927;
    color: #fff;
    border: none;
    border-radius: 5px;
    margin: 0 auto;
}
#green button:hover {
    background-color: #1EAE31;
}
#blue h2 {
    color: #1586C0;
}

#blue button {
    background-color: #1586C0;
    color: #fff;
    border: none;
    border-radius: 5px;
    margin: 0 auto;
}
#blue button:hover {
    background-color: #19A1E6;
}
#red h2 {
    color: #862407;
}
#red button {
    background-color: #862407;
    color: #fff;
    border: none;
    border-radius: 5px;
    margin: 0 auto;
}
#red button:hover {
    background-color: #aa2e09;
}
button.basic {
    background: #fff;
    color: #333;
    float: right;
    
}

/* ===== SERVICES ===== */
#services .wrapper {
    max-width: 1200px;
    padding: 50px 0;
}
#services .inner-wrapper {
    padding: 0 20px;
}
#services-img {
    background-image: url('../img/services-bg.jpg');
    height: 300px;
}
#services .heading {
    flex-direction: column;
    justify-content: center;
    height: 300px;
    text-align: center;
}
#services .heading h1 {
    margin-bottom: 25px;
}
#services .heading p {
    width: 50%;
    margin: 0 auto;
    color: white;
    font-size: 20px;
    text-shadow: 1px 1px #333;
}
.fourth-width img {
    max-width: 100%;
}
.full-width img {
    max-width: 100%;
}

/* ===== CONTACT ===== */
#contact {
    background-image: url('../img/contact-bg.jpg');
    height: 580px;
    display: flex;
    justify-content: center;
    align-items: center;
}
#contact .wrapper {
    max-width: 720px;
}
#contact h1 {
    width: 100%;
}
form {
    width: 100%;
    display: flex;
    justify-content: space-around;
}
.form-left, .form-right {
    display: flex;
    flex-direction: column;
    width: 350px;
}
.form-left {
    margin-right: 10px;
}
.form-right {
    margin-left: 10px;
}
#contact p, #contact form input, #contact textarea {
    background: rgba(255,255,255,0.6);
    color: #333;
    line-height: 24px;
    outline: none;
    border: none;
    box-sizing: border-box;
    margin: 10px;
    padding: 5px 0 5px 10px;
    border-radius: 4px;
}
#contact p {
    padding: 20px 15px;
    text-align: center;
}
::placeholder {
    color:#333;
}
textarea {
    font-family: 'Open Sans', sans-serif;
}
#contact button {
    background-color: #262628;
    color: #fff;
    padding: 10px 20px;
    width: 120px;
    text-align: center;
    margin-left: 10px;
    
}
#contact button:hover {
    background-color: #e6e6e6;
    color: #262628;
}

/* ===== FOOTER ===== */
footer {
    text-align: center;
    line-height: 48px;
    height: 150px;
    display: flex;
    flex-flow: column;
    justify-content: space-around;
    align-items: center;
}
footer h4 {
    color: #AAA;
    font-size: 36px;
    font-style: italic;
    text-shadow: 2px 2px 3px #DDD;
    margin-top: 10px;
}

